# image-prompt-expander

./: .gitignore  AGENTS.md  CLAUDE.md  ITERATION_LOG.md  LESSONS_LEARNED.md  README.md  README.txt  SETUP_AI_AGENT_CONFIG.md  compound_run_report_a8241dbb.md  last_run_report.md  new_tests.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_new_logic.py  test_scratch.py
.claude/: settings.json
.claude/agents/: agent-creator.md  architect.md  planner.md  ux-expert.md
.github/workflows/: ci.yml
docs/: image-model-prompts.md  index.html  llm-grammar-quirks.md
docs/codemaps/: README.md  pipeline.md  server-ui.md  (+1 more)
reports/: run_5efc706e.json
src/: __init__.py  cli.py  config.py  gallery.py  gallery_index.py  grammar_generator.py  grammar_history.py  html_components.py  image_enhancer.py  image_generator.py  lm_studio.py  metadata_manager.py  pipeline.py  tracery_runner.py  utils.py
templates/: system_prompt.txt  system_prompt_flux2-klein.txt  system_prompt_z-image-turbo.txt
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_gallery.py  test_gallery_index.py  test_gallery_service.py  test_grammar_generator.py  test_grammar_history.py  test_grammar_logic.py  test_heartbeat.py  test_html_components.py  test_image_enhancer.py  test_image_generator.py  test_lm_studio.py  test_metadata_manager.py  test_models.py  test_pipeline.py  test_pipeline_integration.py  test_queue_manager.py  test_routes.py  test_server.py  test_system_prompt.py  test_tracery_runner.py  test_utils.py  test_worker.py  test_worker_subprocess.py
(+18 files in other folders)
