[project]
name = "image-prompt-expander"
version = "0.1.0"
description = "Procedural image prompt generator with optional local image generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.0.0",
  "fastapi>=0.109.0",
  "filelock>=3.0.0",
  "openai>=1.0.0",
  "Pillow>=10.0.0",
  "pydantic>=2.0.0",
  "sse-starlette>=1.8.0",
  "tracery>=0.1.1",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
images = [
  "mflux>=0.15.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=4.0.0",
]

[tool.uv]
package = false
